tests/macros/list/validate_async.stderr
error: option `validate_async` does not exist for kind `list`
 --> $DIR/validate_async.rs:2:50
  |
2 |     let q = inquisition::questions![list { async validate: todo!() }];
  |                                                  ^^^^^^^^
