tests/macros/list/validate_async.rs
fn main() {
    let q = inquisition::questions![list { async validate: todo!() }];
}
